infrastructure/kubernetes/ingress-public/public-ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-public-dashboard
  namespace: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
spec:
  ingressClassName: traefik-admin
  rules:
    - host: traefikp.admin.cluster.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-public-dashboard
                port:
                  number: 80
